After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640947 - Doesn't build with current GTK+
Doesn't build with current GTK+
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
2.91.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-01-30 15:47 UTC by Carlos Garcia Campos
Modified: 2011-02-02 08:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the build with recent GTK+ (1.09 KB, patch)
2011-01-30 15:47 UTC, Carlos Garcia Campos
accepted-commit_now Details | Review

Description Carlos Garcia Campos 2011-01-30 15:47:02 UTC
Created attachment 179638 [details] [review]
Fix the build with recent GTK+

CC     libbaconvideowidget_la-bacon-video-widget-gst-missing-plugins.lo
bacon-video-widget-gst-missing-plugins.c:61: error: expected ‘)’ before ‘*’ token
bacon-video-widget-gst-missing-plugins.c: In function ‘bacon_video_widget_gst_get_toplevel’:
bacon-video-widget-gst-missing-plugins.c:98: warning: implicit declaration of function ‘GTK_IS_PLUG’
bacon-video-widget-gst-missing-plugins.c:98: warning: nested extern declaration of ‘GTK_IS_PLUG’
bacon-video-widget-gst-missing-plugins.c:99: warning: implicit declaration of function ‘bacon_video_widget_gtk_plug_get_toplevel’
bacon-video-widget-gst-missing-plugins.c:99: warning: nested extern declaration of ‘bacon_video_widget_gtk_plug_get_toplevel’
bacon-video-widget-gst-missing-plugins.c:99: warning: implicit declaration of function ‘GTK_PLUG’
bacon-video-widget-gst-missing-plugins.c:99: warning: nested extern declaration of ‘GTK_PLUG’



  CC     libtotem_player_la-totem-fullscreen.lo
totem-interface.c:292: error: expected ‘)’ before ‘*’ token
totem-interface.c: In function ‘totem_interface_set_transient_for’:
totem-interface.c:326: warning: implicit declaration of function ‘GTK_IS_PLUG’
totem-interface.c:326: warning: nested extern declaration of ‘GTK_IS_PLUG’
totem-interface.c:330: warning: implicit declaration of function ‘totem_gtk_plug_get_toplevel’
totem-interface.c:330: warning: nested extern declaration of ‘totem_gtk_plug_get_toplevel’
totem-interface.c:330: warning: implicit declaration of function ‘GTK_PLUG’
totem-interface.c:330: warning: nested extern declaration of ‘GTK_PLUG’
totem-interface.c:330: warning: assignment makes pointer from integer without a cast
Comment 1 Philip Withnall 2011-01-30 16:14:09 UTC
Review of attachment 179638 [details] [review]:

Does this require us to bump our GTK+ dependency? Please commit (with a bump to the GTK+ dependency if necessary). Thanks.
Comment 2 Carlos Garcia Campos 2011-01-30 16:24:39 UTC
Yes, I'll push it with the gtk+ requirements bump as soon as a new gtk+ version is released.
Comment 3 Carlos Garcia Campos 2011-02-02 08:56:14 UTC
GTK+ 2.99.3 has been released, and GdkNativeWindow has been removed, so I have just pushed the patch that also uses Window instead of GdkNativeWindow.