Fix the build with recent GTK+

And bump GTK+ requirements to 2.99.3

https://bugzilla.gnome.org/show_bug.cgi?id=640947